Fix css wrap for subscription form

--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ blockquote p:last-child { margin-bottom: 0; }
 
 #mc_embed_signup .mce-form-inputs {
   margin: 0 auto;
-  width: 620px;
+  width: 623px;
 }
 
 #mc_embed_signup label {
